matrix/synapse/synapse-local-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: synapse
  name: synapse-nodeport
spec:
  type: NodePort
  ports:
    - name: http
      port: 8008
      targetPort: 8008
      protocol: TCP
      nodePort: 30015
  selector:
    app: synapse
