matrix/synapse/synapse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
spec:
  selector:
    matchLabels:
      app: synapse
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
        - image: matrixdotorg/synapse:v1.97.0
          name: synapse
          # args: ["generate"]
          resources:
            requests:
              memory: "512Mi"
              cpu: "300m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          # env:
          #   - name: SYNAPSE_SERVER_NAME
          #     value: "ryleycoyote.com"
          #   - name: SYNAPSE_REPORT_STATS
          #     value: "no"
          volumeMounts:
            - name: data
              mountPath: /data
            - mountPath: /usr/local/lib/python3.11/site-packages/shared_secret_authenticator.py
              name: auth-module
              subPath: shared_secret_authenticator.py
          ports:
            - containerPort: 8008
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: synapse-pv-claim
        - name: auth-module
          configMap:
            name: shared-secret-authenticator
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.43.0.10
          - 8.8.8.8
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: synapse
  name: synapse-service
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8008
      protocol: TCP
      targetPort: 8008
  selector:
    app: synapse
  type: ClusterIP
