matrix/synapse/synapse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # acme.cert-manager.io/http01-edit-in-place: "true"
    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - "*.uffdame.com"
      secretName: synapse-tls
  rules:
    - host: uffdame.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse-service
                port:
                  number: 8008
